# Requester

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
diagram/: activity_diagram.puml  class_diagram.puml  sequence_diagram.puml  use_case_diagram.puml
src/: .env.example  manage.py
src/offer/: admin.py  apps.py  documents.py  form.py  models.py  urls.py  views.py
src/offer/management/commands/: insert_jobs.py  insert_offers.py  insert_tags.py
src/offer/migrations/: 0001_initial.py
src/offer/templatetags/: filters.py
src/requester/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
src/requester_handler/: apps.py  tasks.py
src/resumes/: README.md
src/scripts/: insert_applications.sh  insert_jobs.sh  insert_offers.sh  insert_tags.sh  insert_workers.sh
src/templates/assets/: 404.html  body.html  header.html  home.html
src/templates/offer/: dashboard.html  header.html  job.html  jobs.html  login.html  register.html  settings.html
src/templates/offer/reports/: report_email_template.html
src/templates/worker/: dashboard.html  dashbordWorker.html  header.html  infoWoker.html  job.html  jobs.html  jobsworker.html  jobworker.html  login.html  register.html  registerWorker.html  settings.html
src/worker/: admin.py  apps.py  documents.py  form.py  midelver.py  models.py  urls.py  views.py
src/worker/migrations/: 0001_initial.py  0002_alter_jobrequest_status.py  0003_jobrequest_ai_summary.py  0004_alter_jobrequest_ai_summary.py
(+2 files in other folders)
