[project]
name = "collegeproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==5.1",
    "django-extensions==3.2.3",
    "djangorestframework==3.15.2",
    "django-filter==24.2",
    "markdown==3.6",
    "pygraphviz",
    "gunicorn==23.0.0",
    "mysqlclient==2.2.4",
    "python-dotenv==1.0.1",
    "redis==5.0.8",
]

[project.optional-dependencies]
cli = [
    "pytest",
    "autopep8",
    "flake8",
    "pygraphviz",
]